[package]
name = "encryptable"
version = "0.1.0"
edition = "2021"
authors = ["elijah629"]
license = "MIT"
description = "Basic byte encrypter library, supports adding encrypt and decrypt functions to any type"
readme = "README.md"
homepage = "https://github.com/elijah629/encryptable-rs"
repository = "https://github.com/elijah629/encryptable-rs"
keywords = ["encryption", "encrypt", "decrypt"]

[dependencies]
base64 = "0.21.2"
fernet = "0.2.1"
pbkdf2 = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.7"
